css/style.css
@import url('https://fonts.googleapis.com/css2?family=Fahkwang:ital,wght@0,200;0,300;0,400;1,200;1,500&family=IBM+Plex+Mono:ital,wght@0,200;0,300;0,400;0,500;0,700;1,300&family=IBM+Plex+Sans:ital,wght@0,200;0,300;0,400;0,600;1,300&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.selector-for-some-widget {
  box-sizing: content-box;
}

body {
  font-family: 'IBM Plex Mono', monospace;
  font-weight: 300;
}

h1 {
  font-family: 'Fahkwang', sans-serif;
  font-size: 1.5em;
  line-height: 4rem;
  font-weight: 400;
  text-transform: capitalize;
}

h2 {
  font-family: 'Fahkwang', sans-serif;
  text-transform: capitalize;
  font-size: 2rem;
  font-weight: bold;
}

p {
  font-size: 1rem;
  margin-top: 2rem;
}

a {
  color: inherit;
  cursor: pointer;
}

a:hover {
  color: #f11ece;
}

img {
  max-width: 100%;
}

.btn {
  border: 1px solid #111;
  border-radius: 25px;
  padding: 10px 20px;
  align-items: left;
  margin: 20px 0;
  transition: background 0.5s ease-in-out;
}

.btn:hover {
  color: #f11ece;
}

.btn:focus {
  display: none;
}

figcaption {
  font-size: 0.8rem;
  text-align: right;
  margin: 10px 0;
}

.all-but-navbar{
  border: solid transparent 2px;
  margin-left: 300px;
}
.sidenav {
  height: 100%; 
  width: 300px; 
  overflow-x: hidden;
  padding-top: 20px;
  margin: 1em;
  position:fixed;
  background-color: rgb(245, 241, 236);
  padding: 1em;
  box-shadow: 1px 2px 30px rgba(0, 0, 0, 0.5);
  display: flex;
  flex-direction: column;
  justify-content:flex-start;
}

.profile-box {
  background-color: #FFFFFF;
  padding: 1em;
  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
  border-radius: 10px;
  text-align: center;
  margin-bottom: 50px;

}

.sidenav a {
  padding: 6px 8px 6px 16px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
}

.sidenav a:hover {
  color: #f11ece;
}

.main {
  margin-left: 300px; /* Same as the width of the sidebar */
  padding: 0px 10px;
    border: dotted black 2px;

}

@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}


nav ul {
  margin: 0 auto;
  text-align: center;
  padding: 25px;
}

nav ul li {
  display: inline-block;
  margin: 0 20px;
  padding: 0;
  font-size: 0.8rem;
  font-weight: 400;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  text-decoration: none;
}

.skill-list {
  font-family: 'IBM Plex Sans', monospace;
  font-weight: 500;
  margin: 20px 0;
  line-height: 1.8rem;
}

.skill-list li {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 400;
  list-style: none;
}

.row {
  display: flex;
  align-items: center;
}

.profile-img {
  box-shadow: 1px 2px 30px rgba(0, 0, 0, 0.5);
  margin-top: 40px;
  margin-bottom: 10px;
  margin: auto;
  height: 10em;
  border-radius: 50px;
  align-self: center;
}

.skills {
  text-align: center;
  font-size: 2.5rem;
  line-height: 4rem;
  font-style: italic;
  font-weight: 400;
  margin: 2em 100px;
  background-color: rgb(245, 241, 236);
  padding: 1em;
  box-shadow: 1px 2px 30px rgba(0, 0, 0, 0.5);

}

.skills li {
  list-style: none;
  text-align: center;
}

.project {
  margin: 45px 0;
  padding: 25px;
}
.project-img {
  box-shadow: 1px 2px 30px rgba(0, 0, 0, 0.5);
  margin-top: 40px;
  margin-bottom: 10px;
}

.content-box-right {
  margin-left: 50px;
}

.content-box-left {
  margin-right: 50px;
}

.align-left {
  text-align: left;
}

#projects {
  padding-top: 5em;
}

#experience {
  padding: 5em;
}

